Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12956

oops in target_handle_connect()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Upstream
    • None
    • 3
    • 9223372036854775807

      Lustre: DEBUG MARKER: == replay-single test 111b: DNE: unlink striped dir, fail MDT2 ======================================= 01:31:46 (1573417906)
      ...
      LDISKFS-fs (dm-1): mounted filesystem with ordered data mode. Opts: user_xattr,errors=remount-ro,no_mbcache,nodelalloc
      Lustre: DEBUG MARKER: tmp.kWfRXHK7nj: executing wait_import_state_mount (FULL|IDLE) mdc.lustre-MDT0000-mdc-*.mds_server_uuid,mdc.lustre-MDT0001-mdc-*.mds_server_uuid
      BUG: unable to handle kernel NULL pointer dereference at 0000000000000000
      PGD 0 P4D 0 
      Oops: 0010 [#1] SMP DEBUG_PAGEALLOC
      CPU: 0 PID: 11132 Comm: mdt00_000 Tainted: G        W  O     --------- ---  4.18.0 #31
      Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
      RIP: 0010:          (null)
      Code: Bad RIP value.
      RSP: 0018:ffff88017a7dbcb8 EFLAGS: 00010202
      RAX: ffffffff8216dd00 RBX: ffff880172b72a80 RCX: 0000000000000000
      RDX: 0000000000000098 RSI: 0000000000000000 RDI: ffff88012e41cd48
      RBP: ffff880172364208 R08: 0000000000000028 R09: ffff880172b72f30
      R10: 0000000000000000 R11: 0000000000000000 R12: ffff8801723643a8
      R13: 0000000000000000 R14: 0000000000000000 R15: 0000000000000001
      FS:  0000000000000000(0000) GS:ffff880198e00000(0000) knlGS:0000000000000000
      CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      CR2: ffffffffffffffd6 CR3: 000000014e73c000 CR4: 00000000000006b0
      Call Trace:
       ? target_handle_connect+0x1ca9/0x2eb0 [ptlrpc]
       ? tgt_request_handle+0x148/0x17b0 [ptlrpc]
       ? ptlrpc_main+0x1182/0x3180 [ptlrpc]
       ? __kthread_parkme+0x2a/0x80
       ? kthread+0x100/0x140
       ? ptlrpc_register_service+0x15a0/0x15a0 [ptlrpc]
       ? kthread_flush_work_fn+0x10/0x10
       ? ret_from_fork+0x24/0x30
      

            aboyko Alexander Boyko
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: