lustre/ldlm/ldlm_lib.c
@@ -840,7 +840,7 @@ static inline int target_check_recovery_timer(struct obd_device *target)
 	if (!target->obd_recovering || target->obd_recovery_start == 0)
 		return 0;
 
-	remaining = hrtimer_expires_remaining(&target->obd_recovery_timer);
+	remaining = hrtimer_get_remaining(&target->obd_recovery_timer);
 	timeout = ktime_divns(remaining, NSEC_PER_SEC);
 	if (timeout > -30)
 		return 0;
@@ -908,7 +908,7 @@ static int target_handle_reconnect(struct lustre_handle *conn,
 		GOTO(out_already, rc);
 	}
 
-	remaining = hrtimer_expires_remaining(&target->obd_recovery_timer);
+	remaining = hrtimer_get_remaining(&target->obd_recovery_timer);
 	timeout = ktime_divns(remaining, NSEC_PER_SEC);
 	if (timeout > 0) {
 		LCONSOLE_WARN("%s: Client %s (at %s) reconnected, waiting for %d clients in recovery for %lld:%.02lld\n",
@@ -1402,7 +1402,7 @@ no_export:
 			known =
 			   atomic_read(&target->obd_max_recoverable_clients);
 			stale = target->obd_stale_clients;
-			remaining = hrtimer_expires_remaining(timer);
+			remaining = hrtimer_get_remaining(timer);
 			left = ktime_divns(remaining, NSEC_PER_SEC);
 
 			if (ktime_to_ns(remaining) > 0) {
@@ -1920,7 +1920,7 @@ static void extend_recovery_timer(struct obd_device *obd, timeout_t dr_timeout,
 	}
 	LASSERT(obd->obd_recovery_start != 0);
 
-	left_ns = hrtimer_expires_remaining(&obd->obd_recovery_timer);
+	left_ns = hrtimer_get_remaining(&obd->obd_recovery_timer);
 	left = ktime_divns(left_ns, NSEC_PER_SEC);
 
 	if (extend) {
